--- a/templates/checkout/checkout.html
+++ b/templates/checkout/checkout.html
@@ -1,5 +1,6 @@
 {% extends 'layouts/base.html' %}
 {% load static %}
+{% load i18n %}
 {% load custom_filters %}
 {% block content %}
 
@@ -11,7 +12,7 @@
                 <div class="row">
                     <div class="col-xl-12">
                         <div class="hero-cap text-center">
-                            <h2>Checkout</h2>
+                            <h2>{% trans "Checkout" %}</h2>
                         </div>
                     </div>
                 </div>
@@ -30,14 +31,14 @@
                         <!-- User Details -->
                         <div class="col-md-6">
                             <div class="form-group">
-                                <label for="first_name">First Name</label>
+                                <label for="first_name">{% trans "First Name" %}</label>
                                 <input type="text" id="first_name" name="first_name" class="form-control"
                                        placeholder="Enter your first name">
                             </div>
                         </div>
                         <div class="col-md-6">
                             <div class="form-group">
-                                <label for="last_name">Last Name</label>
+                                <label for="last_name">{% trans "Last Name" %}</label>
                                 <input type="text" id="last_name" name="last_name" class="form-control"
                                        placeholder="Enter your last name">
                             </div>
@@ -47,14 +48,14 @@
                     <div class="row">
                         <div class="col-md-6">
                             <div class="form-group">
-                                <label for="email">Email</label>
+                                <label for="email">{% trans "Email" %}</label>
                                 <input type="email" id="email" name="email" class="form-control"
                                        placeholder="Enter your email">
                             </div>
                         </div>
                         <div class="col-md-6">
                             <div class="form-group">
-                                <label for="phone">Phone</label>
+                                <label for="phone">{% trans "Phone" %}</label>
                                 <input type="text" id="phone" name="phone" class="form-control"
                                        placeholder="Enter your phone number">
                             </div>
@@ -64,7 +65,7 @@
                     <div class="row">
                         <div class="col-md-12">
                             <div class="form-group">
-                                <label for="address">Address</label>
+                                <label for="address">{% trans "Address" %}</label>
                                 <input type="text" id="address" name="address" class="form-control"
                                        placeholder="Enter your address">
                             </div>
@@ -74,14 +75,14 @@
                     <div class="row">
                         <div class="col-md-6">
                             <div class="form-group">
-                                <label for="city">City</label>
+                                <label for="city">{% trans "City" %}</label>
                                 <input type="text" id="city" name="city" class="form-control"
                                        placeholder="Enter your city">
                             </div>
                         </div>
                         <div class="col-md-6">
                             <div class="form-group">
-                                <label for="country">Country</label>
+                                <label for="country">{% trans "Country" %}</label>
                                 <input type="text" id="country" name="country" class="form-control"
                                        placeholder="Enter your country">
                             </div>
@@ -91,7 +92,7 @@
                     <div class="row">
                         <div class="col-md-12">
                             <div class="form-group">
-                                <label for="coupon_code">Coupon Code</label>
+                                <label for="coupon_code">{% trans "Coupon Code" %}</label>
                                 <input type="text" id="coupon_code" name="coupon" class="form-control"
                                        placeholder="Enter coupon code (optional)">
                             </div>
@@ -100,7 +101,7 @@
 
                     <div class="row">
                         <div class="col-md-12 text-center">
-                            <button type="submit" class="btn btn-primary">Proceed to Checkout</button>
+                            <button type="submit" class="btn btn-primary">{% trans "Proceed to Checkout" %}</button>
                         </div>
                     </div>
                 </form>
@@ -109,11 +110,11 @@
             <!-- Order Summary -->
             <div class="col-lg-4">
                 <div class="order_box">
-                    <h2>Your Order</h2>
+                    <h2>{% trans "Your Order" %}</h2>
                     <ul class="list">
                         <li>
-                            <a href="#">Product
-                                <span>Total</span>
+                            <a href="#">{% trans "Product" %}
+                                <span>{% trans "Total" %}</span>
                             </a>
                         </li>
                         {% for item in cart_items_with_totals %}
@@ -128,17 +129,17 @@
 
                     <ul class="list list_2">
                         <li>
-                            <a href="#">Subtotal
+                            <a href="#">{% trans "Subtotal" %}
                                 <span>${{ order.subtotal|floatformat:2 }}</span>
                             </a>
                         </li>
                         <li>
-                            <a href="#">Shipping
+                            <a href="#">{% trans "Shipping" %}
                                 <span>Flat rate: ${{ order.shipping_cost|floatformat:2 }}</span>
                             </a>
                         </li>
                         <li>
-                            <a href="#">Total
+                            <a href="#">{% trans "Total" %}
                                 <span>${{ order.total|floatformat:2 }}</span>
                             </a>
                         </li>
