--- a/templates/contact/contact.html
+++ b/templates/contact/contact.html
@@ -1,4 +1,5 @@
 {% extends 'layouts/base.html' %}
+{% load i18n %}
 {% load static %}
 {% block content %}
     <!-- slider Area Start-->
@@ -10,7 +11,7 @@
                 <div class="row">
                     <div class="col-xl-12">
                         <div class="hero-cap text-center">
-                            <h2>Contact Us</h2>
+                            <h2>{% trans "Contact Us" %}</h2>
                         </div>
                     </div>
                 </div>
@@ -25,7 +26,7 @@
 
             <div class="row">
                 <div class="col-12">
-                    <h2 class="contact-title">Get in Touch</h2>
+                    <h2 class="contact-title">{% trans "Get in Touch" %}</h2>
                 </div>
                 <div class="col-lg-8">
                     <form class="form-contact contact_form"
@@ -63,7 +64,7 @@
                             </div>
                         </div>
                         <div class="form-group mt-3">
-                            <button type="submit" class="button button-contactForm boxed-btn">Send</button>
+                            <button type="submit" class="button button-contactForm boxed-btn">{% trans "Send" %}</button>
                         </div>
                     </form>
                 </div>
