--- a/templates/layouts/base.html
+++ b/templates/layouts/base.html
@@ -1,4 +1,7 @@
 <!doctype html>
+{% load i18n %}
+{% get_current_language as LANGUAGE_CODE %}
+{% get_available_languages as LANGUAGES %}
 <html class="no-js" lang="zxx">
 {% load static %}
 
@@ -6,7 +9,7 @@
 <head>
     <meta charset="utf-8">
     <meta http-equiv="x-ua-compatible" content="ie=edge">
-    <title>eCommerce HTML-5 Template </title>
+    <title>Estore</title>
     <meta name="description" content="">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     {#    <link rel="manifest" href="/site">#}
@@ -49,20 +52,39 @@
                     <div class="col-xl-12">
                         <div class="row d-flex justify-content-between align-items-center">
                             <div class="header-info-left d-flex">
-                                <div class="flag">
-                                    <img src="{% static 'img/icon/header_icon.png' %}" alt="">
-                                </div>
                                 <div class="select-this">
-                                    <form action="#">
-                                        <div class="select-itms">
-                                            <select name="select" id="select1">
-                                                <option value="">USA</option>
-                                                <option value="">SPN</option>
-                                                <option value="">CDA</option>
-                                                <option value="">USD</option>
-                                            </select>
-                                        </div>
-                                    </form>
+                                    <div class="dropdown">
+                                        <!-- Current language -->
+                                        <button class="btn btn-outline-secondary dropdown-toggle" type="button"
+                                                id="languageDropdown" data-bs-toggle="dropdown" aria-expanded="false">
+                                            {% if LANGUAGE_CODE == "en" %}
+                                                🇺🇸 en
+                                            {% elif LANGUAGE_CODE == "ru" %}
+                                                🇷🇺 ru
+                                            {% elif LANGUAGE_CODE == "uz" %}
+                                                🇺🇿 uz
+                                            {% endif %}
+                                        </button>
+                                        <ul class="dropdown-menu" aria-labelledby="languageDropdown">
+                                            <!-- Other languages -->
+                                            {% for language in LANGUAGES %}
+                                                {% if language.0 != LANGUAGE_CODE %}
+                                                    <li>
+                                                        <a class="dropdown-item"
+                                                           href="/{{ language.0 }}{{ request.path|slice:'3:' }}">
+                                                            {% if language.0 == "en" %}
+                                                                🇺🇸 {{ language.0 }}
+                                                            {% elif language.0 == "ru" %}
+                                                                🇷🇺 {{ language.0 }}
+                                                            {% elif language.0 == "uz" %}
+                                                                🇺🇿 {{ language.0 }}
+                                                            {% endif %}
+                                                        </a>
+                                                    </li>
+                                                {% endif %}
+                                            {% endfor %}
+                                        </ul>
+                                    </div>
                                 </div>
                                 <ul class="contact-now">
                                     <li>+998972888001</li>
@@ -70,7 +92,7 @@
                             </div>
                             <div class="header-info-right">
                                 <ul>
-                                    <li><a href="{% url 'authentication:profile' %}">My Account</a></li>
+                                    <li><a href="{% url 'authentication:profile' %}">{% trans 'My Account' %}</a></li>
                                 </ul>
                             </div>
                         </div>
@@ -92,15 +114,17 @@
                                 <nav>
                                     <ul id="navigation">
                                         <li><a href="/">Home</a></li>
-                                        <li><a href="{% url 'base:shop' %}">Shop</a></li>
-                                        <li><a href="{% url 'blog:blog' %}">Blog</a></li>
-                                        <li><a href="#">Pages</a>
+                                        <li><a href="{% url 'base:shop' %}">{% trans 'Shop' %}</a></li>
+                                        <li><a href="{% url 'blog:blog' %}">{% trans 'Blog' %}</a></li>
+                                        <li><a href="#">{% trans 'Pages' %}</a>
                                             <ul class="submenu">
-                                                <li><a href="{% url 'store:cart' %}">Card</a></li>
-                                                <li><a href="{% url 'checkout:checkout' %}">Product Checkout</a></li>
+                                                <li><a href="{% url 'store:cart' %}">{% trans 'Card' %}</a></li>
+                                                <li>
+                                                    <a href="{% url 'checkout:checkout' %}">{% trans 'Product Checkout' %}</a>
+                                                </li>
                                             </ul>
                                         </li>
-                                        <li><a href="{% url 'contact:contact' %}">Contact</a></li>
+                                        <li><a href="{% url 'contact:contact' %}">{% trans 'Contact' %}</a></li>
                                     </ul>
                                 </nav>
                             </div>
@@ -121,12 +145,15 @@
                                 </li>
                                 {% if request.user.is_authenticated %}
                                     <li class="d-none d-lg-block"><a href="{% url 'authentication:logout' %}"
-                                                                     class="btn header-btn">Log out</a></li>
+                                                                     class="btn header-btn">{% trans 'Log out' %}</a>
+                                    </li>
                                 {% else %}
                                     <li class="d-none d-lg-block"><a href="{% url 'authentication:register' %}"
-                                                                     class="btn header-btn">Sign up</a></li>
+                                                                     class="btn header-btn">{% trans 'Sign up' %}</a>
+                                    </li>
                                     <li class="d-none d-lg-block"><a href="{% url 'account_login' %}"
-                                                                     class="btn header-btn">Sign in</a></li>
+                                                                     class="btn header-btn">{% trans 'Sign in' %}</a>
+                                    </li>
                                 {% endif %}
                             </ul>
                         </div>
@@ -212,7 +239,11 @@
                             </div>
                             <div class="footer-tittle">
                                 <div class="footer-pera">
-                                    <p>You can find best clothes in Estore online shop website</p>
+                                    <p>
+                                        {% blocktrans %}
+                                            You can find best clothes in Estore online shop website.
+                                        {% endblocktrans %}
+                                    </p>
                                 </div>
                             </div>
                         </div>
@@ -221,11 +252,11 @@
                 <div class="col-xl-3 col-lg-3 col-md-4 col-sm-7">
                     <div class="single-footer-caption mb-50">
                         <div class="footer-tittle">
-                            <h4>Products For</h4>
+                            <h4>{% trans "Products For" %}</h4>
                             <ul>
-                                <li><a href="{% url 'base:shop' %}">Woman</a></li>
-                                <li><a href="{% url 'base:shop' %}">Man</a></li>
-                                <li><a href="{% url 'base:shop' %}"> Children</a></li>
+                                <li><a href="{% url 'base:shop' %}">{% trans 'Woman' %}</a></li>
+                                <li><a href="{% url 'base:shop' %}">{% trans "Man" %}</a></li>
+                                <li><a href="{% url 'base:shop' %}">{% trans "Children" %}</a></li>
                             </ul>
                         </div>
                     </div>
@@ -235,7 +266,7 @@
                         <div class="footer-tittle">
                             <h4>Support</h4>
                             <ul>
-                                <li><a href="{% url 'contact:contact' %}"> Contact Us</a></li>
+                                <li><a href="{% url 'contact:contact' %}">{% trans "Contact Us" %}</a></li>
                             </ul>
                         </div>
                     </div>
@@ -243,7 +274,7 @@
                 <div class="col-xl-3 col-lg-3 col-md-5 col-sm-7">
                     <div class="single-footer-caption mb-50">
                         <div class="footer-tittle">
-                            <h4>Support</h4>
+                            <h4>{% trans "Support" %}</h4>
                             <ul>
                                 <li><a href="https://x.com/"><i class="fab fa-twitter"></i></a></li>
                                 <li><a href="https://www.facebook.com/"><i class="fab fa-facebook-f"></i></a></li>
